# nonebot-plugin-group-fuukiiin

./: .gitignore  .pre-commit-config.yaml  README.md  pokepoke.py  pyproject.toml
src/plugins/nonebot_plugin_group_fuukiiin/: __init__.py  config.py  pinyin_fuukiiin.py  repeat_fuukiiin.py  rule_set.py  transitions.py  utils.py
